# docs/swagger.json
@@ -464,6 +464,46 @@
                 }
             }
         },
+        "/v1/comment/create": {
+            "post": {
+                "description": "为某篇文章添加评论",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Comment接口"
+                ],
+                "summary": "新增评论",
+                "parameters": [
+                    {
+                        "description": "评论内容",
+                        "name": "label",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Comment"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "评论成功",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ResponseObject"
+                        }
+                    },
+                    "500": {
+                        "description": "服务器错误",
+                        "schema": {
+                            "$ref": "#/definitions/entity.ResponseObject"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/comment/delete/{id}": {
             "delete": {
                 "security": [
@@ -838,6 +878,9 @@
         },
         "model.Comment": {
             "type": "object",
+            "required": [
+                "content"
+            ],
             "properties": {
                 "articleId": {
                     "type": "integer",
